# xmlwitch

./: LICENSE  Makefile  README.md  pyproject.toml  xmlbuilder.py  xmlbuilder3.py
xmlbuilder/: __init__.py  test.py
