[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xmlbuilder"
authors = [
    {name = "Jonas Galvez", email = "jonasgalvez@gmail.com"},
    {name = "Beat Bolli", email = "me+python@drbeat.li"}
]
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.10',
    'Topic :: Software Development :: Libraries',
    'Topic :: Text Processing :: Markup :: HTML',
    'Topic :: Text Processing :: Markup :: XML',
    'Typing :: Typed',
]
dynamic = ["version", "description"]
requires-python = ">=3.10"

[project.urls]
Home = "https://drbeat.li/py/"
